[package]
name = "mamalluca"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.3.23", features = ["derive"] }
clap-verbosity-flag = "2.0.1"
ezsockets = "0.6.2"
maplit = "1.0.2"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
async-trait = "0.1.77"
url = "2.5.0"
dashmap = { version = "5.5.3", features = ["serde"] }
strum = { version = "0.26.1", features = ["derive"] }
serde_json_path = "0.6.5"
json-patch = "1.2.0"
metrics = "0.22.1"
metrics-exporter-prometheus = "0.14"
metrics-util = "0.16.2"
