[package]
name = "klipper-types"
description = "Type definitions for Klipper 3D printer firmware status objects"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.26", features = ["derive"] }
