[package]
name = "mamalluca"
description = "A Prometheus exporter for Klipper/Moonraker metrics"
readme = "../README.md"
repository = "https://github.com/mjonuschat/mamalluca"
keywords = ["klipper", "moonraker", "prometheus", "exporter", "mamalluca", "instrumentation", "metrics"]
version = "0.1.1"
edition = "2024"
license = "GPL-3.0-or-later"
publish = false

[dependencies]
anyhow = "1"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
inventory = "0.3"
klipper-types = { path = "../klipper-types" }
mamalluca-macros = { path = "../mamalluca-macros" }
metrics = "0.22"
metrics-exporter-prometheus = "0.14"
metrics-util = "0.16"
moonraker-client = { path = "../moonraker-client" }
moonraker-types = { path = "../moonraker-types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync", "signal", "macros"] }
tokio-util = { version = "0.7", features = ["rt"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"
