[package]
name = "moonraker-client"
description = "Async WebSocket client for the Moonraker 3D printer management API"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
publish = false

[dependencies]
backon = "1"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
json-patch = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
tokio-util = "0.7"
tracing = "0.1"
url = "2"
